# lsport

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.debian-test  KEY.gpg  LICENSE  README.md  SECURITY.md  clippy.toml  install.sh  rustfmt.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
debian/: changelog  control  copyright  files  lsport.1  lsport.install  rules  watch
debian/source/: options
debian/upstream/: metadata
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages
dists/stable/main/binary-arm64/: Packages
pool/main/: lsport_0.1.2_amd64.deb  lsport_0.1.2_arm64.deb  lsport_0.2.10_amd64.deb  lsport_0.2.10_arm64.deb  lsport_0.2.11_amd64.deb  lsport_0.2.11_arm64.deb  lsport_0.2.4_amd64.deb  lsport_0.2.4_arm64.deb  lsport_0.2.5_amd64.deb  lsport_0.2.5_arm64.deb  lsport_0.2.6_amd64.deb  lsport_0.2.6_arm64.deb  lsport_0.2.7_amd64.deb  lsport_0.2.7_arm64.deb  lsport_0.2.8_amd64.deb  lsport_0.2.8_arm64.deb  lsport_0.2.9_amd64.deb  lsport_0.2.9_arm64.deb  lsport_0.3.0_amd64.deb  lsport_0.3.0_arm64.deb  lsport_0.3.10_amd64.deb  lsport_0.3.10_arm64.deb  lsport_0.3.1_amd64.deb  lsport_0.3.1_arm64.deb  lsport_0.3.2_amd64.deb  lsport_0.3.2_arm64.deb  lsport_0.3.3_amd64.deb  lsport_0.3.3_arm64.deb  lsport_0.3.4_amd64.deb  lsport_0.3.4_arm64.deb  lsport_0.3.5_amd64.deb  lsport_0.3.5_arm64.deb  lsport_0.3.6_amd64.deb  lsport_0.3.6_arm64.deb  lsport_0.3.7_amd64.deb  lsport_0.3.7_arm64.deb  lsport_0.3.8_amd64.deb  lsport_0.3.8_arm64.deb  lsport_0.3.9_amd64.deb  lsport_0.3.9_arm64.deb
scripts/: ci-local.sh  release.sh  setup-hooks.sh  test-debian-docker.sh
src/: app.rs  main.rs  remote.rs  scanner.rs  ui.rs
